Component Area Width Bug Fixed on Tablet Viewport

--- a/less/template.less
+++ b/less/template.less
@@ -159,6 +159,7 @@ div#dc-container,
 
 #dc-component{
 	#dc-less-component;
+	padding:1em;
 }
 
 /* left Sidebar */
@@ -285,7 +286,7 @@ a.shaz3e:hover{background-position:bottom center;}
 	.dc-componentLeft{}
 	.dc-componentRight{}
 	.dc-componentFull{width:100%;}
-	#dc-component{}
+	#dc-component{margin:1em 0.5%; width:99%;}
 	article{margin-bottom:10px;}
 	
 	/* Content Top Module 3 grid */	
@@ -295,7 +296,8 @@ a.shaz3e:hover{background-position:bottom center;}
 	.dc-content-bottom{margin: 0 -0.5%;}
 		
 	.dc-right-sidebar,.dc-left-sidebar{
-		width:100%;
+		width:99%;
+		margin:1em 0.5%;
 	}
 	.dc-right-sidebar{margin-top:1em;}
 	#dc-right-sidebar{}
@@ -336,7 +338,7 @@ a.shaz3e:hover{background-position:bottom center;}
 	.dc-componentLeft{}
 	.dc-componentRight{}
 	.dc-componentFull{width:99%;}
-	#dc-component{margin:0 0.5%;width:96.2%;}
+	#dc-component{margin:1em 0; width:100%;}
 	article{margin-bottom:10px;}
 	
 	
@@ -347,8 +349,8 @@ a.shaz3e:hover{background-position:bottom center;}
 	.dc-content-bottom{width:101% !important;display:block;margin:0;}
 	
 	.dc-right-sidebar,.dc-left-sidebar{
-		width:99%;
-		margin:0 0.5%;
+		width:100%;
+		margin:1em 0;
 	}
 	
 	.dc-right-sidebar{}
